test/errors/type/collections/set/__eq3.yasl
echo collections.set().__eq(1, true)
